force-app/main/default/objects/redwing__ILT_Class__c/redwing__ILT_Class__c.object-meta.xml
<CustomObject>
    <label>ILT Class</label>
    <nameField>
        <label>ILT Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ILT Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>