force-app/main/default/objects/redwing__ILT_Class__c/fields/redwing__Description__c.field-meta.xml
<CustomField>
    <fullName>redwing__Description__c</fullName>
    <description>Overview of the ILT Class and its objective</description>
    <inlineHelpText>This description is displayed for users on the ILT Class detail page.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>