force-app/main/default/objects/redwing__ILT_Class__c/fields/redwing__Duration__c.field-meta.xml
<CustomField>
    <fullName>redwing__Duration__c</fullName>
    <inlineHelpText>Duration of ILT Class in days.</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>