force-app/main/default/objects/redwing__ILT_Class__c/fields/redwing__Enable_Waitlist__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Waitlist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, all participants that will be registering for a class after the Max Seats limit is reached will be added to the Waitlist. Email Notification will be send to waitlisted participants. Refer to Appendix A for detailed Waitlist workflow</description>
    <label>Enable Waitlist</label>
    <type>Checkbox</type>
</CustomField>