force-app/main/default/objects/redwing__ILT_Class__c/fields/redwing__Enable_Weekend__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Weekend__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If unchecked, the duration will only include Monday-Friday days.</inlineHelpText>
    <label>Enable Weekend ILT Classes</label>
    <type>Checkbox</type>
</CustomField>