force-app/main/default/objects/redwing__ILT_Class__c/fields/redwing__End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>redwing__End_DateTime__c</fullName>
    <inlineHelpText>Date and Time when the ILT Class will end (in current user’s timezone)</inlineHelpText>
    <label>End DateTime</label>
    <type>DateTime</type>
</CustomField>