force-app/main/default/objects/redwing__ILT_Class__c/fields/redwing__Enroll_In_Optional_Sessions__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enroll_In_Optional_Sessions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, end users will be automatically enrolled in all optional session of the class. If not, then users will need to be manually enrolled in each session.</inlineHelpText>
    <label>Auto Enroll in Optional ILT Sessions</label>
    <type>Checkbox</type>
</CustomField>