force-app/main/default/objects/redwing__ILT_Class__c/fields/redwing__Learning__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning__c</fullName>
    <label>Learning</label>
    <referenceTo>redwing__Learning__c</referenceTo>
    <relationshipLabel>ILT Classes</relationshipLabel>
    <relationshipName>ILT_Classes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>