force-app/main/default/objects/redwing__ILT_Class__c/fields/redwing__Location__c.field-meta.xml
<CustomField>
    <fullName>redwing__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>redwing__ILT_Location__c</referenceTo>
    <relationshipLabel>ILT Classes</relationshipLabel>
    <relationshipName>ILT_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>