force-app/main/default/objects/redwing__ILT_Class__c/fields/redwing__Max_Seats__c.field-meta.xml
<CustomField>
    <fullName>redwing__Max_Seats__c</fullName>
    <description>The maximum number of users that can be enrolled in the ILT Class. All following users will either be added to a Waitlist (if enabled) or will see a message that limit for the ILT Class is reached and they will not be registered.</description>
    <label>Max Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>