force-app/main/default/objects/redwing__ILT_Class__c/fields/redwing__Max_Waitlist_Seats__c.field-meta.xml
<CustomField>
    <fullName>redwing__Max_Waitlist_Seats__c</fullName>
    <description>The maximum number of users that can be added to the waitlist. All following users will see a message that limit is reached and they will not be added to the waitlist queue.</description>
    <label>Max Waitlist Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>