force-app/main/default/objects/redwing__ILT_Class__c/fields/redwing__Min_Seats__c.field-meta.xml
<CustomField>
    <fullName>redwing__Min_Seats__c</fullName>
    <description>The minimum number of users required for the ILT Class to take place</description>
    <label>Min Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>