force-app/main/default/objects/redwing__ILT_Class__c/fields/redwing__Min_Sessions_For_Completion__c.field-meta.xml
<CustomField>
    <fullName>redwing__Min_Sessions_For_Completion__c</fullName>
    <inlineHelpText>Minimum number of sessions user should complete to get credit for the ILT Class. If empty, user must complete all required sessions.</inlineHelpText>
    <label>Min Sessions for Completion</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>