force-app/main/default/objects/redwing__ILT_Class__c/fields/redwing__Registration_Cutoff__c.field-meta.xml
<CustomField>
    <fullName>redwing__Registration_Cutoff__c</fullName>
    <inlineHelpText>Specify the number of calendar days before the class starts when users should no longer be able to register</inlineHelpText>
    <label>Registration Cutoff</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>