force-app/main/default/objects/redwing__ILT_Class__c/fields/redwing__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>redwing__Start_Date__c</fullName>
    <description>Date when the ILT Class will start</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>