force-app/main/default/objects/redwing__ILT_Class__c/fields/redwing__Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>redwing__Start_DateTime__c</fullName>
    <inlineHelpText>Date and Time when the ILT Class will start (in current user’s timezone)</inlineHelpText>
    <label>Start DateTime</label>
    <type>DateTime</type>
</CustomField>