force-app/main/default/objects/redwing__ILT_Class__c/fields/redwing__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>redwing__Start_Time__c</fullName>
    <label>Start Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>