force-app/main/default/objects/redwing__ILT_Class__c/validationRules/redwing__ILT_Location_Max_Seats_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>redwing__ILT_Location_Max_Seats_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>redwing__Location__r.redwing__Max_Seats__c &lt; redwing__Max_Seats__c</errorConditionFormula>
    <errorDisplayField>redwing__Location__c</errorDisplayField>
    <errorMessage>ILT Location does not have enough seats to accomodate this ILT Class. Please select a different Location</errorMessage>
</ValidationRule>