force-app/main/default/objects/redwing__ILT_Class__c/validationRules/redwing__ILTClass_Start_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>redwing__ILTClass_Start_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>redwing__Start_Date__c &gt; redwing__End_Date__c</errorConditionFormula>
    <errorMessage>Start Date cannot be later than the End Date</errorMessage>
</ValidationRule>